--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Arthur Le Meur
 description: Strategic Partner Manager
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://raw.githubusercontent.com/arthurlemeur/arthurlemeur.github.io/images/profile.JPG
 
 #
 # Flags below are optional
