--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Arthur Le Meur
 
 # Short bio or description (displayed in the header)
-description: Strategic Partner Manager
+description: tech, personal finance, crypto, traveling, meditation, reading, fencing, kitesurf, crossfit, yoga. Work @Google
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars0.githubusercontent.com/u/13008496?s=460&v=4
